...
    }
    
    private func addActions(to alertController: UIAlertController) {
        if let action = action(for: .camera, title: "Take photo") {
            alertController.addAction(action)
        }
        if let action = action(for: .savedPhotosAlbum, title: "Camera roll") {
            alertController.addAction(action)
        }
        if let action = action(for: .photoLibrary, title: "Photo library") {
            alertController.addAction(action)
        }
        alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
    }
    
    private func checkIfOnIpadDevice(for alertController: UIAlertController, from sourceView: UIView) {
        // set the proper source view & rect, otherwise the app will crash on iPads
        if UIDevice.current.userInterfaceIdiom == .pad {
            alertController.popoverPresentationController?.sourceView = sourceView
...
