...

import UIKit


enum AlertCase {
    // invalid
    case invalidLabInfoInput
    // Creating
    case createLabToAddEquipments
    // Reading/loading
    case failToLoadEquipments
    case failToLoadLabEquipments
    case failToLoadEquipmentInfo
...
